# MDBJ

./: .gitignore  .pre-commit-config.yaml  eslint.config.mjs  hs300_20231231_20260405.csv  knip.json  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
raw_lyrics/: extract_lyrics.py
raw_lyrics/01_第一张创作专辑(1999)/: 拥抱.lrc
raw_lyrics/02_爱情万岁(2000)/: 心中无别人.lrc  明白(歌迷版).lrc
raw_lyrics/03_人生海海(2001)/: 啾啾啾.lrc  好不好.lrc
raw_lyrics/04_时光机(2003)/: 小时候.lrc  而我知道(冰融演奏版).lrc  雌雄同体.lrc
raw_lyrics/05_神的孩子都在跳舞(2004)/: 小护士.lrc
raw_lyrics/06_为爱而生(2006)/: 快乐很伟大.lrc  摩托车日记.lrc
raw_lyrics/07_后青春期的诗(2008)/: 后青春期的诗.lrc  噢买尬.lrc
raw_lyrics/08_第二人生(2011)/: 我不愿让你一个人.lrc  末日.txt
raw_lyrics/09_自传(2016)/: 兄弟.txt  好好.txt  如果我们不曾相遇.txt  少年他的奇幻漂流.txt  派对动物.txt
resources/: song_data.json
resources/field_notes/: process_field_notes.py
resources/lyrics/: 5525_song_list.txt  5526_song_list.txt  DNA.txt  OAOA.txt  pronoun_relations.json  一千個世紀.txt  九號球.txt  乾杯.txt  人生海海.txt  任性.txt  任意門.txt  入陣曲.txt  回來吧.txt  天使.txt  如果我們不曾相遇.txt  孫悟空.txt  志明與春嬌.txt  恆星的恆心.txt  愛情萬歲.txt  憨人.txt  戀愛ING.txt  成名在望.txt  我不願讓你一個人.txt  我心中尚未崩壞的地方.txt  星空.txt  時光機.txt  最重要的小事.txt  派對動物.txt  瘋狂世界.txt  盛夏光年.txt  相信.txt  突然好想你.txt  第二人生.txt  約翰藍儂.txt  終結孤單.txt  諾亞方舟.txt  讓我照顧你.txt  超人.txt  軋車.txt  轉眼.txt  (+1 more)
resources/lyrics/01/: 01_瘋狂世界.txt  02_擁抱.txt  03_透露.txt  04_生活.txt  05_愛情的模樣.txt  06_嘿我要走了.txt  07_軋車.txt  08_志明與春嬌.txt  (+4 more)
resources/raw_lyrics/: extract_lyrics.py
resources/tapes/: split_tapes.py
src/py/: analyze_compare.py  analyze_pronoun_relations.py  analyze_red_song.py  analyze_songs.py  blur.py  extract_musixmatch_token.py  fetch_hs300.py  fetch_lyrics.py  fetch_musixmatch_lyrics.py  green_song.csv  halftone.py  main.py  red_song.csv  song_data.py  song_lyrics.py  thicken_logo.py
src/ts/: add-tape-to-mayday.ts  build.ts  build_riso.ts  collage-left.ts  generate-coarse-grid.ts  generate-grid-variants.ts  process-stickers.ts  text-overlay.ts
(+220 files in other folders)
